--- a/LearningDemo/Base.lproj/Main.storyboard
+++ b/LearningDemo/Base.lproj/Main.storyboard
@@ -13,29 +13,29 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DRK-vh-73G">
-                                <rect key="frame" x="16" y="20" width="186" height="177"/>
+                                <rect key="frame" x="-4" y="20" width="186" height="177"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hrK-Ll-R5x">
-                                <rect key="frame" x="212" y="20" width="186" height="177"/>
+                                <rect key="frame" x="192" y="20" width="186" height="177"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ym8-a8-hZd">
-                                <rect key="frame" x="16" y="205" width="186" height="177"/>
+                                <rect key="frame" x="-4" y="205" width="186" height="177"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2rV-Lp-ig8">
-                                <rect key="frame" x="212" y="205" width="186" height="177"/>
+                                <rect key="frame" x="192" y="205" width="186" height="177"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RfG-1r-X1g">
-                                <rect key="frame" x="16" y="390" width="186" height="177"/>
+                                <rect key="frame" x="-4" y="390" width="186" height="177"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ThA-pZ-LyD">
-                                <rect key="frame" x="212" y="390" width="186" height="177"/>
+                                <rect key="frame" x="192" y="390" width="186" height="177"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E1s-R8-oOy">
-                                <rect key="frame" x="61" y="575" width="97" height="62"/>
+                                <rect key="frame" x="41" y="575" width="97" height="29"/>
                                 <state key="normal" title="NSOperation">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -44,7 +44,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aGX-0L-LtQ">
-                                <rect key="frame" x="264" y="575" width="83" height="62"/>
+                                <rect key="frame" x="244" y="575" width="83" height="29"/>
                                 <state key="normal" title="GCD">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -53,7 +53,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uwg-th-kG7">
-                                <rect key="frame" x="16" y="645" width="382" height="55"/>
+                                <rect key="frame" x="16" y="612" width="343" height="47"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -61,8 +61,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="gcdBtn" destination="aGX-0L-LtQ" id="kB1-de-8mp"/>
+                        <outlet property="imgView1" destination="DRK-vh-73G" id="FaS-2b-ihp"/>
+                        <outlet property="imgView2" destination="hrK-Ll-R5x" id="skG-bq-MP8"/>
+                        <outlet property="imgView3" destination="ym8-a8-hZd" id="WZ9-xG-Kj7"/>
+                        <outlet property="imgView4" destination="2rV-Lp-ig8" id="RoP-NY-cR0"/>
+                        <outlet property="imgView5" destination="RfG-1r-X1g" id="FYZ-kI-PDf"/>
+                        <outlet property="imgView6" destination="ThA-pZ-LyD" id="ugv-T1-xxU"/>
+                        <outlet property="operationBtn" destination="E1s-R8-oOy" id="Cod-kW-PV1"/>
                         <outlet property="resultLb" destination="Uwg-th-kG7" id="Juu-zi-LI2"/>
                     </connections>
                 </viewController>
